objects/Mkt_Product_to_Taxonomy_Hirearchy_link__c.object
<CustomObject>
    <description>Created as a part of DPS - 18901</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Created as a part of DPS - 18901</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product2id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18901</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product to Taxonomy Hierarchy Link</relationshipLabel>
        <relationshipName>Product_to_Taxonomy_Hierarchy_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Txnmy_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18901</description>
        <label>Taxonomy Hierarchy</label>
        <referenceTo>Mkt_Taxonomy_Hierarchy__c</referenceTo>
        <relationshipLabel>Product to Taxonomy Hierarchy Link</relationshipLabel>
        <relationshipName>Product_to_Taxonomy_Hierarchy_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Txnmy_Is_primary__c</fullName>
        <description>Created as a part of DPS  - 18901</description>
        <label>Taxonomy Is Primary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Txnmy_Prd_ID__c</fullName>
        <description>Created as a part of DPS - 18901</description>
        <externalId>true</externalId>
        <label>Taxonomy Prd Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Txnmy_Status__c</fullName>
        <description>Created as a part of DPS -18901</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Active</fullName>
                </value>
                <value>
                    <fullName>1 - Inactive (Paused)</fullName>
                </value>
                <value>
                    <fullName>2 - Inactive (Removed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product to Taxonomy Hierarchy Link</label>
    <nameField>
        <label>Product to Taxonomy Hierarchy Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product to Taxonomy Hierarchy Link</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>